[gd_scene load_steps=6 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/parallax_bg.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/runner.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/monster.tscn" id="4"]

[sub_resource type="RectangleShape2D" id="ground_shape"]
size = Vector2(500, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1")
monster_scene = ExtResource("4")

[node name="ParallaxBG" type="ParallaxBackground" parent="."]
script = ExtResource("2")
base_speed = 100.0
auto_scroll = true

[node name="Runner" parent="." instance=ExtResource("3")]
position = Vector2(47, 422)

[node name="UI" type="CanvasLayer" parent="."]

[node name="DepthLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "DEPTH: 1"
horizontal_alignment = 1

[node name="FragmentLabel" type="Label" parent="UI"]
offset_left = 15.0
offset_top = 790.0
offset_right = 150.0
offset_bottom = 820.0
theme_override_colors/font_color = Color(0.6, 0.4, 1, 1)
theme_override_font_sizes/font_size = 18
text = "◆ 0"

[node name="HPBar" type="ProgressBar" parent="UI"]
offset_left = 270.0
offset_top = 795.0
offset_right = 375.0
offset_bottom = 815.0
theme_override_styles/fill = null
value = 100.0
show_percentage = false

[node name="GameOverPanel" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="ColorRect" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="Title" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = -50.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "EXTRACTED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FragmentsLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -30.0
offset_right = 120.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(0.6, 0.4, 1, 1)
theme_override_font_sizes/font_size = 28
text = "◆ 0 fragments"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DepthLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "Reached Depth 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TapPrompt" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 120.0
offset_right = 120.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "tap to run again"
horizontal_alignment = 1
vertical_alignment = 1
